--- a/web/Reco.html
+++ b/web/Reco.html
@@ -100,8 +100,8 @@
                 <input type="text" class="form-control" id="foodtype" name="foodtype">
             </div>
 
-            <button type="submit" class="btn btn-danger btn-lrg "
-                style="width:50%; padding:10px;margin-left:20%; font-weight:bold; position: relative;">Recommend Diets</button>
+            <button type="submit" class="btn btn-danger btn-lrg center "
+                style="width:50%; padding:10px;margin-left:20%; font-weight:bold; position: relative;;">Recommend Diets</button>
         </form>
     </div>
 
