--- a/web/index.html
+++ b/web/index.html
@@ -75,8 +75,12 @@
         choices by seamlessly incorporating crucial user-specific factors. Users provide inputs such as age, height,
         weight, gender, and activity level, transforming NutriGuru into a personalized nutrition advisor.
       </p>
+    </div>
+
       <br>
-      <h3>Why NutriGuru ?</h3>
+      <div class="container" style="background-color: rgba(255, 255, 255, 0.9); padding: 20px;">
+
+      <p><h3 style="text-align: center;">Why NutriGuru ?</h3><p>
       <ul style="padding-left: 250px; padding-right: 250px; font-size: 20px;">
         <li><strong>Dynamic Adaptability:</strong> NutriGuru's user-centric design ensures a dynamic and adaptive system
           that evolves with user feedback. This ongoing interaction allows the platform to refine and adjust its
